    * libseahorse/seahorse-progress.glade:
    * src/seahorse-key-manager.glade: 
    * src/seahorse-keyserver-result.glade:
    * src/seahorse-keyserver-sync.glade: UI fixes
    * libseahorse/seahorse-progress.c:
    * libseahorse/seahorse-progress.h:
    * libseahorse/seahorse-recipients.c:
    * src/seahorse-key-manager.c:
    * src/seahorse-keyserver-results.c: App status bar progress fixes.
    
2005-04-03  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-key-properties.c: Fix compiler warning.
    
2005-04-02  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-util.c: 
    * libseahorse/seahorse-util.h: Add string compare function.
    Fix problem with choosing wrong extension for encryption.
    
2005-04-01  Steve Murphy  <murf@e-tools.com>

        * configure.in: Added "rw" to ALL_LINGUAS.

2005-04-01  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-util.c: Fix crasher in seahorse_util_add_suffix.
    * data/seahorse.schemas.in: Remove 'show_length' option.
    
2005-03-31  Nate Nielsen  <nielsen@memberwebs.com> 

    * src/seahorse-key-manager-store.c: 
    * src/seahorse-preferences.c: Remove the 'Length' column from the main 
    key manager display. Still available in Key Properties. 
    * src/seahorse-key-manager-store.c: Cleanup columns of main Key Manager 
    display to be simpler and less busy. 
    
2005-03-30  Nate Nielsen <nielsen@memberwebs.com>
    
    * src/Makefile.am: 
    * src/seahorse-expires.c:
    * src/seahorse-expires.glade:
    * src/seahorse-key-dialog.h:
    * src/seahorse-key-properties.c: Use another dialog to prompt for expiry
    date changes (bug #105300)
    
2005-03-28  Nate Nielsen <nielnen@memberwebs.com>

    * libseahorse/seahorse-util.c: Properly detect armor mode and change
    extension. 
    * data/seahorse.schemas.in:
    * libseahorse/seahorse-context.h:
    * libseahorse/seahorse-op.c:
    * libseahorse/seahorse-prefs.c: