@@ -52,6 +52,11 @@
     * libseahorse/seahorse-recipients.c:
     * src/seahorse-key-manager.c:
     * src/seahorse-keyserver-results.c: App status bar progress fixes.
+    * libseahorse/seahorse-keyserver-control.c:
+    * libseahorse/seahorse-keyserver-control.h:
+    * libseahorse/seahorse-util.c:
+    * libseahorse/seahorse-util.h: Fixed problems with the key server 
+    selector tool.
     
 2005-04-03  Nate Nielsen  <nielsen@memberwebs.com>
 
